# company_rating

./: .complexipy.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: data_agent.md
src/: jobspy_poc.py  kununu_scraper_poc.py  main.py
src/application/services/: job_orchestrator.py
src/domain/entities/: job.py
src/domain/ports/: blacklist_port.py  company_command_port.py  company_query_port.py  company_scraper_port.py  job_command_port.py  job_query_port.py  job_scraper_port.py
src/domain/value_objects/: company.py
src/infrastructure/adapters/: blacklist_file_based.py  company_command_file_based.py  company_query_file_based.py  job_command_file_based.py  job_query_file_based.py
src/infrastructure/scrapers/: jobspy_scraper.py  kununu_scraper.py
src/models/: job_dict.py  scraper_model.py
src/poc/: README.md  company_scraper.py  import_kununu_companies.py  match_company_names.py
src/presentation/: streamlit_app.py
src/utils/: settings.py
