[project]
name = "companyrating"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "complexipy>=4.2.0",
    "playwright>=1.55.0",
    "pre-commit>=4.3.0",
    "python-jobspy>=1.1.82",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "streamlit>=1.50.0",
]

[tool.isort]
profile = "black"
src_paths = ["src", "test"]
